kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bofa-aas-stable
  namespace: bofa-as-a-service
  labels:
    app.kubernetes.io/name: bofa-aas-stable
    app.kubernetes.io/instance: bofa-aas
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: bofa-aas-stable
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: "2"
      maxUnavailable: "3"
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bofa-aas-stable
        app.kubernetes.io/instance: bofa-aas
    spec:
      containers:
        - name: bofa-aas
          image: samanthaemilyrachelb/bofa-aas:stable
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
