kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bofa-aas-stable
  namespace: bofa-aas
  labels:
    app.kubernetes.io/name: bofa-aas-stable
    app.kubernetes.io/instance: bofa-aas
spec:
  selector:
    app.kubernetes.io/name: bofa-aas-stable
  ports:
    - port: 80
      targetPort: "3000"
